<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fierd_Activivity"
    android:background="@color/background">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/geo"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:layout_marginTop="22dp"
        android:layout_marginLeft="30dp"
        android:textSize="24sp"/>

    <ImageView
        android:layout_width="150dp"
        android:layout_height="133dp"
        android:layout_marginTop="70dp"
        android:layout_marginLeft="137dp"
        android:background="@drawable/geometry" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/result"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:layout_marginTop="283dp"
        android:layout_marginLeft="60dp"
        android:textSize="18sp"/>
    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginLeft="60dp"
        android:layout_marginTop="335dp"
        android:background="@drawable/rectangle">

        <TextView
            android:id="@+id/shapeName"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_marginLeft="80dp"
            android:layout_marginTop="14dp"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/namefig"
            android:inputType="textEmailAddress" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginLeft="60dp"
        android:layout_marginTop="420dp"
        android:background="@drawable/rectangle">

        <TextView
            android:id="@+id/res"
            android:layout_marginLeft="90dp"
            android:layout_marginTop="13dp"
            android:layout_width="280dp"
            android:layout_height="48dp"
            android:ems="10"
            android:textSize="18sp"
            android:hint="@string/result2"
            android:inputType="textEmailAddress"
            />
    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button"
        android:layout_width="312dp"
        android:layout_height="48dp"
        android:layout_marginTop="520dp"
        android:layout_marginLeft="50dp"
        android:background="@drawable/btn"
        android:fontFamily="sans-serif"
        android:text="@string/register"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:textAllCaps="false"
        android:onClick="OnFirstActivity"/>
</RelativeLayout>