<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="360dp"
    android:layout_height="640dp"
    tools:context=".Second_Activivity"
    android:background="@color/background">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Pick"

        android:textStyle="bold"
        android:layout_marginTop="22dp"
        android:layout_marginLeft="96dp"
        android:textSize="24sp"
        android:textColor="@color/white"/>

    <ImageView
        android:layout_width="460dp"
        android:layout_height="265dp"
        android:layout_marginTop="73dp"
        android:background="@drawable/title" />
    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="365dp"
        android:background="@drawable/rectangle">

        <EditText
            android:id="@+id/editTextTextEmailAddress"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/Pickfig"
            android:inputType="textEmailAddress" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="430dp"
        android:background="@drawable/rectangle">

        <EditText
            android:id="@+id/editTextTextEmailAddress2"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/data"
            android:inputType="textEmailAddress" />
    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button"
        android:layout_width="312dp"
        android:layout_height="48dp"
        android:layout_marginTop="520dp"
        android:layout_marginLeft="20dp"
        android:background="@drawable/button"
        android:fontFamily="sans-serif"
        android:text="@string/enterr"
        android:textStyle="bold"
        android:textSize="24sp"
        android:textColor="@color/white"
        android:textAllCaps="false"/>
</RelativeLayout>