<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="360dp"
    android:layout_height="640dp"
    tools:context=".MainActivity"
    android:background="@color/background"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/geo"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:layout_marginTop="70dp"
        android:layout_marginLeft="10dp"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:layout_width="150dp"
        android:layout_height="133dp"
        android:layout_marginTop="42dp"
        android:layout_marginLeft="105dp"
        android:background="@drawable/geometry" />
    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="62dp"
        android:background="@drawable/rectangle">

        <EditText
            android:id="@+id/editTextTextEmailAddress"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/Login"
            android:inputType="textEmailAddress" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="35dp"
        android:background="@drawable/rectangle">

        <EditText
            android:id="@+id/editTextTextEmailAddress2"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/Password"
            android:password="true"
            android:inputType="textEmailAddress" />
    </LinearLayout>
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button"
        android:layout_width="312dp"
        android:layout_height="48dp"
        android:layout_marginTop="50dp"
        android:layout_marginLeft="15dp"
        android:background="@drawable/button"
        android:fontFamily="sans-serif"
        android:text="@string/register"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:textAllCaps="false"/>
</LinearLayout>